# ascend-tools

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  ci.yml  integration.yml  release-python.yml  release.yml
docs/: INSTALLATION.md  QUICKSTART.md  README.md  cli.md  mcp.md  python.md  rust.md
src/ascend_ops/: __init__.py  cli.py  client.py  core.pyi
src/ascend_ops/ascend-ops/: Cargo.toml
src/ascend_ops/ascend-ops-cli/: Cargo.toml
src/ascend_ops/ascend-ops-cli/src/: cli.rs  main.rs
src/ascend_ops/ascend-ops-core/: Cargo.toml
src/ascend_ops/ascend-ops-core/src/: models.rs
src/ascend_ops/ascend-ops-py/: Cargo.toml
src/ascend_ops/ascend-ops-py/src/: lib.rs
src/ascend_ops/ascend-ops/src/: auth.rs  client.rs  config.rs  lib.rs  models.rs
src/ascend_tools/: Cargo.toml  __init__.py  cli.py  core.pyi
src/ascend_tools/ascend-tools-cli/: Cargo.toml  README.md
src/ascend_tools/ascend-tools-cli/src/: cli.rs  lib.rs  main.rs  skill-cli.md  skill-mcp.md  skill-py.md  skill.md
src/ascend_tools/ascend-tools-cli/tests/: cli_integration.rs
src/ascend_tools/ascend-tools-core/: Cargo.toml  README.md
src/ascend_tools/ascend-tools-core/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  models.rs
src/ascend_tools/ascend-tools-core/tests/: client_http.rs
src/ascend_tools/ascend-tools-mcp/: Cargo.toml  README.md
src/ascend_tools/ascend-tools-mcp/src/: lib.rs  params.rs  server.rs
src/ascend_tools/ascend-tools-py/: Cargo.toml  README.md
src/ascend_tools/ascend-tools-py/src/: lib.rs
tests/: integration.py  integration.sh  rest.py
