[project]
name = "ascend-tools"
version = "0.1.0"
description = "SDK and CLI for the Ascend REST API"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Cody", email = "cody.peterson@ascend.io" }]
dependencies = []

[project.scripts]
ascend-tools = "ascend_tools:main"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "ruff>=0.9",
    "pytest>=8",
    "ipython>=9.10.0",
]

[tool.maturin]
module-name = "ascend_tools.core"
python-packages = ["ascend_tools"]
python-source = "src"
manifest-path = "src/ascend_tools/ascend-tools-py/Cargo.toml"

[[tool.uv.index]]
url = "https://pypi.org/simple/"

[[tool.uv.index]]
url = "https://us-python.pkg.dev/ascend-io-ops-artifacts/private-pypi/simple"
default = true

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/ascend_tools/ascend-tools-core/**/*.rs" },
  { file = "src/ascend_tools/ascend-tools-mcp/**/*.rs" },
  { file = "src/ascend_tools/ascend-tools-cli/**/*.rs" },
  { file = "src/ascend_tools/ascend-tools-py/**/*.rs" },
]
