[workspace]

[package]
name = "ascend-ops-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ascend <support@ascend.io>"]
license = "MIT"
description = "CLI for the Ascend REST API"

[lib]
name = "ascend_ops_cli"
path = "src/lib.rs"

[[bin]]
name = "ascend-ops"
path = "src/main.rs"

[dependencies]
ascend-ops = { path = "../ascend-ops" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
