[workspace]

[package]
name = "ascend-ops-py"
version = "0.1.0"
edition = "2024"
authors = ["Ascend <support@ascend.io>"]
license = "MIT"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
ascend-ops = { path = "../ascend-ops" }
ascend-ops-cli = { path = "../ascend-ops-cli" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
serde_json = "1"
