[workspace]

[package]
name = "ascend-ops-py"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody.peterson@ascend.io>"]
license = "MIT"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
ascend-ops-core = { path = "../ascend-ops-core" }
ascend-ops-cli = { path = "../ascend-ops-cli" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
pythonize = "0.28"
serde = "1"
serde_json = "1"
