[workspace]

[package]
name = "ascend-ops"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ascend <support@ascend.io>"]
license = "MIT"
description = "SDK for the Ascend REST API"

[lib]
name = "ascend_ops"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ureq = { version = "3", features = ["platform-verifier"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
jsonwebtoken = "9"
base64 = "0.22"
percent-encoding = "2"
