[workspace]

[package]
name = "ascend-tools-py"
version = "0.3.1"
edition = "2024"
authors = ["Cody <cody.peterson@ascend.io>"]
license = "MIT"
repository = "https://github.com/ascend-io/ascend-tools"
homepage = "https://github.com/ascend-io/ascend-tools"
readme = "README.md"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
ascend-tools-core = { path = "../ascend-tools-core" }
ascend-tools-cli = { path = "../ascend-tools-cli" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py313"] }
pythonize = "0.28"
serde = "1"
serde_json = "1"
